Ensure that white-space: nowrap isn't inherited in components
This option is useful to avoid unwanted components wrapping, but
inside components it should be set to default 'normal' value, e.g. not
to break text wrapping.

--- a/src/sass/lab/_interactive-components.sass
+++ b/src/sass/lab/_interactive-components.sass
@@ -35,6 +35,10 @@
 .component
   display: inline-block
   vertical-align: middle
+  // Important! Layout algorithm sometimes uses 'nowrap' value for containers
+  // to prevent unwanted component wrapping. Ensure that inside component,
+  // the default value is used.
+  white-space: normal
   margin: 0
   padding: 0
   -webkit-user-select: none
